--- a/Client/Components/Topics/TopicsComponent.razor
+++ b/Client/Components/Topics/TopicsComponent.razor
@@ -102,7 +102,7 @@
 
                     </Authorized>
                     <NotAuthorized>
-                        <div class=".topic-buttons">
+                        <div class="topic-buttons">
                             <div class="actions">
                                 <button @onclick="() => NavigateToTopicDetails(topic.Id)">Details</button>
                             </div>
